# awesome-faang-interview

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LESSONS_LEARNED.md  LICENSE  Makefile  README.md  pyproject.toml
src/faang_interview/: __init__.py  cli.py  core.py  py.typed  resources.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_resources.py
