[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome-faang-interview"
version = "1.0.0"
description = "Your Ultimate Guide to Landing Your Dream Tech Job - A curated collection of FAANG interview resources"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["faang", "interview", "leetcode", "system-design", "data-structures", "algorithms"]
authors = [
    {name = "Ümit Kaçar", email = "umit@example.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-sugar>=1.0.0",
    "pytest-randomly>=3.15.0",
    "coverage[toml]>=7.4.0",
    "pre-commit>=3.6.0",
    "hatch>=1.9.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
]

[project.urls]
Documentation = "https://github.com/umitkacar/awesome-faang-interview#readme"
Issues = "https://github.com/umitkacar/awesome-faang-interview/issues"
Source = "https://github.com/umitkacar/awesome-faang-interview"

[project.scripts]
faang = "faang_interview.cli:app"

# ============================================================================
# HATCH Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/faang_interview"]

[tool.hatch.envs.default]
dependencies = [
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-sugar>=1.0.0",
    "pytest-randomly>=3.15.0",
    "coverage[toml]>=7.4.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-parallel = "pytest -n auto {args:tests}"
test-cov = "pytest --cov=src/faang_interview --cov-report=term-missing --cov-report=html --cov-report=xml {args:tests}"
test-cov-parallel = "pytest -n auto --cov=src/faang_interview --cov-report=term-missing --cov-report=html --cov-report=xml {args:tests}"
type-check = "mypy src tests"
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "black src tests"
format-check = "black --check src tests"
security = "bandit -r src -c pyproject.toml"
all = [
    "format",
    "lint",
    "type-check",
    "security",
    "test-cov-parallel",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# ============================================================================
# RUFF Configuration (Linting & Formatting)
# ============================================================================

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "AIR",    # Airflow
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "FBT001",  # Boolean positional argument (common in Typer)
    "FBT002",  # Boolean default value (common in Typer)
    "FBT003",  # Boolean positional value (common in Typer/Pydantic)
    "RSE102",  # Unnecessary parentheses on raised exception
    "EM101",   # Exception string literals
    "TRY003",  # Avoid long exception messages
    "FA100",   # Missing future annotations (not needed for Python 3.9+)
    "B008",    # Function call in argument defaults (Typer pattern)
    "PLR2004", # Magic values in comparisons
    "RUF012",  # Mutable class attributes (Pydantic Config pattern)
    "PLC0415", # Import outside top-level (test pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected
    "ARG",     # Unused function args
    "FBT",     # Boolean trap
    "PLR2004", # Magic value used in comparison
    "S311",    # Standard pseudo-random generators
]

[tool.ruff.lint.isort]
known-first-party = ["faang_interview"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# BLACK Configuration (Code Formatting)
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# MYPY Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = true
strict_equality = false
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "faang_interview.*"
warn_return_any = false

# ============================================================================
# PYTEST Configuration (Testing)
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# COVERAGE Configuration (Test Coverage)
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# BANDIT Configuration (Security Linting)
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
